<resources>
    <string name="app_name">回响直播</string>
    <string name="tabone_title">首页</string>
    <string name="tabthree_title">我的</string>
    <string name="tabtwo_title">直播</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="labelAccount">账 号</string>
    <string name="labelPwd">密 码</string>
    <string name="etPwd">请输入密码</string>
    <string name="loginLabel">登 录</string>
    <string name="regLabel">注 册</string>
    <string name="forgotPwd">忘记密码?</string>
    <string name="inpPhone">请输入手机号</string>
    <string name="labelVali">验证码</string>
    <string name="inpVali">请输入验证码</string>
    <string name="getCode">获取验证码</string>
    <string name="etAccount">请输入手机号</string>
    <string name="xieyi">注册代表同意回响所有条款</string>
    <string name="labelHeadPhoto">头像</string>
    <string name="nickName">昵称</string>
    <string name="sex">性别</string>
    <string name="phone">手机号</string>
    <string name="signature">个性签名</string>
    <string name="hobby">兴趣爱好</string>
    <string name="tag">我的标签</string>
    <string name="tagSearch">标签搜索</string>
    <string name="upUserInfo">修改个人资料</string>

    <string name="artist">如何成为艺人~</string>
    <string name="fan">粉丝</string>
    <string name="value">身价</string>
    <string name="sign">未签到</string>
    <string name="order">订单</string>
    <string name="account">账户</string>
    <string name="live">直播</string>
    <string name="love">爱心</string>
    <string name="set">设置</string>
    <string name="coupon">优惠码</string>
    <string name="response">意见反馈</string>
    <string name="moneyBag">钱包</string>
    <string name="balance">账户余额:</string>
    <string name="takeMoney">提现</string>
    <string name="myRedBag">我的红包</string>
    <string name="zfxieyi">支付协议</string>
    <string name="today_rm">今日推荐</string>
    <string name="safe">账号与安全</string>
    <string name="aboutus">关于我们</string>
    <string name="help">帮助中心</string>
    <string name="clearcache">清除缓存</string>
    <string name="cachelarge">22.5M</string>
    <string name="exitlogin">退出登录</string>
    <string name="question1">1、怎么认证艺人。</string>
    <string name="question2">2、如何体现？</string>
    <string name="question3">3、金币怎么兑换礼物？</string>
    <string name="question4">4、如何开启直播？</string>
    <string name="sure">确定</string>
    <string name="selTheme">#选择话题#</string>
    <string name="localClose">定位关闭</string>
    <string name="localOpen">定位打开</string>
    <string name="shareToFriend">分享给小伙伴</string>
    <string name="startLive">开始直播</string>
    <string name="phonebind">手机绑定</string>
    <string name="changepassword">修改密码</string>
    <string name="qqbind">QQ绑定</string>
    <string name="weibobind">微博绑定</string>
    <string name="weixinbind">微信绑定</string>
    <string name="bind">绑定</string>
    <string name="exit">退出</string>
    <string name="index_button_live">LIVE</string>
    <string name="index_button_video">视频回放</string>
    <string name="input_your_favorite_video">搜索喜欢的艺人或直播</string>

    <string name="input_search">功能待定</string>
    <string name="myconcern">我关注的人</string>
    <string name="searchfans">搜索喜欢的艺人或直播</string>
    <string name="fansname2">旺仔小苹果</string>
    <string name="myfans">我的粉丝</string>
    <string name="fansname1">葫芦娃</string>
    <string name="fansname3">深圳第一家</string>

    <string name="txt_reg_title">以下信息均为必填,为了保证您的利益,请如实填写</string>
    <string name="txt_name">姓名</string>
    <string name="txt_job">职业</string>
    <string name="txt_hight">身高</string>
    <string name="txt_weight">体重</string>
    <string name="txt_tunwei">臀围</string>
    <string name="txt_yaowei">腰围</string>
    <string name="txt_xw">胸围</string>
    <string name="txt_size">三围</string>
    <string name="txt_mobile">手机</string>
    <string name="txt_validate_code">验证码</string>
    <string name="txt_get_code">获取验证码</string>
    <string name="txt_next_step">提交认证</string>
    <string name="txt_authentication">身份认证</string>
    <string name="txt_reg_success_msg">认证申请提交成功</string>
    <string name="txt_reg_success_info"><Data><![CDATA[我们会在<font color="#EE5383">5个工作日内</font>审核]]></Data></string>
    <string name="txt_card_number">证件号码</string>
    <string name="txt_card_save">保存资料</string>
    <string name="txt_return_index">返回首页</string>
    <string name="payCoin">充值:￥</string>
    <string name="payMoney">充值</string>
    <string name="haveFans">已粉</string>
    <string name="labenSj">身价</string>
    <string name="cancel">取消</string>


    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载…</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="uploadLevel">立级升级</string>
    <string name="upload_msg_buttom">WIFI环境下更新不到30秒哦〜</string>
    <string name="sgin_title">连续签到两天</string>

    <string name="labelNewPhoen">新手机号</string>
    <string name="commit">提交</string>
    <string name="haveAccount">已有账号</string>
    <string name="newPhoneBind">新手机绑定</string>
    <string name="updatePwd">修改密码</string>
    <string name="myLoves">我的爱心</string>

    <string name="txt_love_info"><Data><![CDATA[<font color="#C1BFC0">送爱心</font>]]></Data></string>
    <string name="txt_card">身份证</string>
    <string name="request_auth">申请认证</string>
    <string name="share_title">分享给小伙伴</string>
    <string name="my_pic">浏览</string>


    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>


    <string name="output_video_size">输出视频大小</string>
    <string name="frame_rate">帧率:</string>
    <string name="defalut_frame_rate">默认帧率:</string>
    <string name="tv_rate">码率:</string>
    <string name="defalut_rate">默认码率为2兆,码率越小质量越差，合成更快</string>
    <string name="app_camera">切换摄像头</string>
    <string name="live_auth">鉴权</string>
    <string name="live_create">创建直播并且开始推流</string>
    <string name="live_stop">结束推流</string>
    <string name="live_play">得到播放URL</string>
    <string name="toggle_switch_beauty_on">美颜开启</string>
    <string name="toggle_switch_beauty_off">美颜关闭</string>
    <string name="input_live_url">输入直播观看地址</string>
    <string name="play_live">观看直播</string>
    <string name="stop_live">停止观看</string>
    <string name="goto_watch_live">测试观看直播</string>
    <string name="labenHot">人气</string>
    <string name="labenHotRank">人气贡献榜</string>
    <string name="attention_me">关注我的人</string>
    <string name="attention">关注</string>
    <string name="empty_des">暂无数据</string>
    <string name="bann_details">内容详情</string>
    <string name="qianming">签名</string>
    <string name="userCard">形象卡</string>
    <string name="userAuth">认证</string>
    <string name="feedBack">反馈</string>
    <string name="my_circle">相册</string>
    <string name="ip_coupon">输入优惠码</string>
    <string name="ip_get">立即领取</string>
    <string name="coupon_des">优惠说明:</string>
    <string name="coupon_des1">爱心用于在回响直播平台消费，为喜欢艺人送爱心，兑换回响币。</string>
    <string name="coupon_des2">领取爱心，玩转回响直播，为你喜欢的主播加油！</string>
    <string name="coupon_title_s">邀请朋友获得优惠</string>
    <string name="coupon_title">优惠</string>
    <string name="love_des">已存入至爱心账户</string>
    <string name="my_know">我知道了</string>
    <string name="see_record_love">查看爱心记录</string>
    <string name="dynamic_detial">动态详情</string>
    <string name="push_dynamic">发布动态</string>
    <string name="group_head_name">群申请</string>
    <string name="group_name">群聊</string>
    <string name="group_chat_info">聊天信息</string>
    <string name="friend">朋友</string>
    <string name="group_names">群聊名称</string>
    <string name="group_message">消息免打扰</string>
    <string name="group_all_member">全部成员(130)</string>
    <string name="group_member">群成员(130)</string>
    <string name="group_clean_record">清空聊天记录</string>
    <string name="group_zd">置顶聊天</string>
    <string name="group_ts">投拆</string>
    <string name="group_member_gx">贡献:  </string>
    <string name="newFriend">新朋友</string>
    <string name="group_chat">群聊</string>
    <string name="inviteFriend">邀请的朋友</string>
    <string name="userInfo">详细资料</string>
    <string name="setRemark">设置备注</string>
    <string name="userTag">标签</string>
    <string name="localArea">地区</string>
<<<<<<< HEAD
    <string name="add">添加</string>

=======
    <string name="create_group">创建群</string>
>>>>>>> 2719bc81130816e273fc577833feaa7f8a349d4b

    <string-array name="dynamic_video">
        <item>录制拍摄</item>
        <item>本地视频</item>
    </string-array>
</resources>
