<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/ll_p_inner"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">


            <com.huixiangtv.liveshow.utils.widget.MySeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:changeVal="3"
                app:processVal="57"
                android:id="@+id/ms_height"
                app:textHight="170cm"
                app:textName="@string/txt_hight"
                 
                app:unit="cm"></com.huixiangtv.liveshow.utils.widget.MySeekBar>

            <com.huixiangtv.liveshow.utils.widget.MySeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:changeVal="3"
                android:id="@+id/ms_weight"
                app:processVal="70"
                app:textHight="50kg"
                  
                app:textName="@string/txt_weight"
                app:unit="kg"></com.huixiangtv.liveshow.utils.widget.MySeekBar>


            <com.huixiangtv.liveshow.utils.widget.MySeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:processVal="70"
                  
                android:id="@+id/ms_hip"
                app:textHight="50cm"
                app:textName="@string/txt_tunwei"
                app:unit="cm"></com.huixiangtv.liveshow.utils.widget.MySeekBar>

            <com.huixiangtv.liveshow.utils.widget.MySeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:processVal="70"
                android:id="@+id/ms_waist"
                  
                app:textHight="50cm"
                app:textName="@string/txt_yaowei"
                app:unit="cm"></com.huixiangtv.liveshow.utils.widget.MySeekBar>

            <com.huixiangtv.liveshow.utils.widget.MySeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:processVal="70"
                android:id="@+id/ms_bust"
                  
                app:textHight="50cm"
                app:textName="@string/txt_xw"
                app:unit="cm"

                ></com.huixiangtv.liveshow.utils.widget.MySeekBar>


        </LinearLayout>

        <TextView
            android:layout_weight="0.2"
            android:layout_gravity="right"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:id="@+id/tvSave"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/button_radius_bottom_bg"
            android:layout_width="0dp"
            android:text="确定"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>