<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/sysBg"
    tools:context=".activity.SettingActivity">

   <com.huixiangtv.live.ui.CommonTitle
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/myTitle"
       />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safe"
        style="@style/label_small_style"
        />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/listview"

        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_weixinbind"
            android:id="@+id/weixinbindimg"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/weixinbindimg"
            android:layout_centerVertical="true"
            android:text="@string/weixinbind"
            style="@style/black_normal_style"
            />
        <TextView
            android:id="@+id/weixinbind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:text="@string/bind"
            style="@style/white_normal_style"
            android:background="@drawable/set_bind"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/listview"
        android:layout_marginTop="0.1dp"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_qq_bind"
            android:id="@+id/qqbindimg"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/qqbindimg"
            android:layout_centerVertical="true"
            android:text="@string/qqbind"
            style="@style/black_normal_style"
            />
        <TextView
            android:id="@+id/qqbind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/bind"
            style="@style/black_normal_style"
            android:background="@drawable/set_qqbind"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/listview"
        android:layout_marginTop="0.1dp"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/icon_weibobind"
            android:id="@+id/weibobindimg"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/weibobindimg"
            android:layout_centerVertical="true"
            android:text="@string/weibobind"
            style="@style/black_normal_style"
            />
        <TextView
            android:id="@+id/weibobind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/bind"
            style="@style/white_normal_style"
            android:background="@drawable/set_bind"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            style="@style/label_small_style"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:clickable="true"
        android:background="@drawable/listview"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:text="@string/aboutus"
            style="@style/black_normal_style"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/icon_go"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/helpcentre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:clickable="true"
        android:background="@drawable/listview"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_centerVertical="true"
            android:text="@string/help"
            style="@style/black_normal_style"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@mipmap/icon_go"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
    <TextView
    android:id="@+id/tvLoginOut"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:text="@string/exit"
    android:gravity="center"
    android:background="@drawable/set_exit"
    style="@style/white_bigger_style"
    />
    </RelativeLayout>
</LinearLayout>
